tests/baselines/reference/parseCommaSeperatedNewlineString.errors.txt
tests/cases/compiler/parseCommaSeperatedNewlineString.ts(1,2): error TS2304: Cannot find name 'a'.
tests/cases/compiler/parseCommaSeperatedNewlineString.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/compiler/parseCommaSeperatedNewlineString.ts (2 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    '')